--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,26 +1,27 @@
 @import "{{ site.theme }}";
+
 .fill:hover,
 .fill:focus {
   box-shadow: inset 0 0 0 2em var(--hover);
 }
 
 // Animate the size, outside
-.pulse:hover, 
+.pulse:hover,
 .pulse:focus {
-  animation: pulse 1s;
+  animation: header 1s;
   box-shadow: 0 0 0 2em rgba(#fff,0);
 }
 
-@keyframes pulse {
+@keyframes header {
   0% { box-shadow: 0 0 0 0 var(--hover); }
 }
 
 // Stack multiple shadows, one from the left, the other from the right
 .close:hover,
 .close:focus {
-  box-shadow: 
+  box-shadow:
     inset -3.5em 0 0 0 var(--hover),
-    inset 3.5em 0 0 0 var(--hover);  
+    inset 3.5em 0 0 0 var(--hover);
 }
 
 // Size can also be negative; see how it's smaller than the element
@@ -43,14 +44,14 @@
 }
 
 // Multiple shadows, one on the outside, another on the inside
-.offset {  
-  box-shadow: 
+.offset {
+  box-shadow:
     0.3em 0.3em 0 0 var(--color),
     inset 0.3em 0.3em 0 0 var(--color);
-  
+
   &:hover,
   &:focus {
-    box-shadow: 
+    box-shadow:
       0 0 0 0 var(--hover),
       inset 6em 3.5em 0 0 var(--hover);
   }
@@ -61,11 +62,11 @@
   // Make a map with the class names and matching colors
 $colors: (
   fill: #a972cb,
-  pulse: #ef6eae, 
-  close: #ff7f82, 
-  raise: #ffa260, 
-  up: #e4cb58, 
-  slide: #8fc866, 
+  pulse: #ef6eae,
+  close: #ff7f82,
+  raise: #ffa260,
+  up: #e4cb58,
+  slide: #8fc866,
   offset: #19bc8b
 );
 
@@ -79,12 +80,12 @@ $colors: (
 }
 
 // Now every button will have different colors as set above. We get to use the same structure, only changing the custom properties.
-button {  
+button {
   color: var(--color);
   transition: 0.25s;
-  
+
   &:hover,
-  &:focus { 
+  &:focus {
     border-color: var(--hover);
     color: #fff;
   }
@@ -95,7 +96,7 @@ body {
   color: #fff;
   background: hsl(227, 10%, 10%);
   font: 300 1em 'Fira Sans', sans-serif;
-  
+
   // Center everything ever
   justify-content: center;
   align-content: center;
@@ -117,7 +118,7 @@ button {
 
 h1 { font-weight: 400; }
 
-code { 
+code {
   color: #e4cb58;
   font: inherit;
 }
